--- a/.cdb.md
+++ b/.cdb.md
@@ -1,3 +1,5 @@
+<!-- markdownlint-disable MD041 -->
+
 This mod show in items tooltips which mod do they come from.
 
 To determinate which tooltip title will be shown, this mod use the folowing methods, sorted by priority:
